syntax="proto3";
option java_multiple_files=true;

package sales;

service OrderManager {
    rpc PlaceOrder(OrderInput) returns (OrderStatus);
    rpc FetchInvoice(CustomerInput) returns (stream InvoiceEntry); 
}

message OrderInput {
    string customer_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
}

message OrderStatus {
    int32 order_id = 1;
}

message CustomerInput {
    string customer_id = 1;
}

message InvoiceEntry {
    int32 product_id = 1;
    int32 quantity = 2;
    string date_of_order = 3;
}

